Renamed wistiaService to wistiaData and used the dist version in demo app.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
 
 
 <!-- Main App JS -->
-<script src="src/js/wistia.module.js"></script>
-<script src="src/js/wistia.constants.js"></script>
-<script src="src/js/services/wistia-service.js"></script>
-<script src="src/js/directives/wistia-player.directive.js"></script>
+<script src="dist/angular-wistia.js"></script>
 
 <script src="app.js"></script>
 <script src="features/attachments/sample-page/sample-page.js"></script>
