--- a/main.html
+++ b/main.html
@@ -149,7 +149,10 @@
 
 <script src="dist/angular-wistia.js"></script>
 <script src="js/main.module.js"></script>
+
 <script src="js/main.controller.js"></script>
+<script src="js/wistia-data-page.controller.js"></script>
+
 <script src="js/menu.directives.js"></script>
 <script src="js/filters.js"></script>
 
